fixed scrollbar padding

--- a/frontend/src/components/AudioPlaylist/AudioPlaylist.module.css
+++ b/frontend/src/components/AudioPlaylist/AudioPlaylist.module.css
@@ -66,6 +66,7 @@
     flex-grow: 1;
     overflow: hidden;
     overflow-y: scroll;
+    padding-bottom: 200px;
 }
 
 .playlistheader {
